fix: Исправлены ошибки в тестах